--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,198 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Meeting Minutes Generator</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Automated Meeting Minutes Generator</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main class="container">
-    <h1 class="title">✨ Automated Meeting Minutes Generator</h1>
+  <div class="dashboard">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <h2 class="logo">AMMG</h2>
+      <nav class="nav-links">
+        <a href="#" class="active">Dashboard</a>
+        <a href="#">Uploads</a>
+        <a href="#">Transcriptions</a>
+        <a href="#">Settings</a>
+      </nav>
+    </aside>
 
-    <form id="upload-form" class="form">
-      <label for="audio" class="label">Upload your meeting audio</label>
-      <input type="file" id="audio" name="audio" accept=".mp3,.wav,audio/*" required class="file-input" />
-      <button type="submit" class="btn primary">Upload Audio</button>
-    </form>
-    
-    <div id="loading-message" style="display:none; color: blue; font-weight: bold; margin-top: 10px;">Transcribing please wait...</div>
-    <button id="transcribe-btn" disabled class="btn secondary">Transcribe Audio</button>
+    <!-- Main Area -->
+    <main class="main-content">
+      <!-- Header -->
+      <header class="header">
+        <h1>Automated Meeting Minutes Generator</h1>
+        <div class="user-icon">👤</div>
+      </header>
 
-    <div id="loading-indicator" class="loading" hidden>
+      <!-- Panels -->
+      <section class="content-grid">
+        <!-- Upload Panel -->
+        <div class="glass-card">
+          <h2>Upload Audio</h2>
+          <form id="upload-form">
+            <label for="audio">Select an audio file (.mp3, .wav):</label>
+            <input type="file" id="audio" name="audio" accept=".mp3,.wav,audio/*" required />
+            <button type="button" id="upload-btn">Upload Audio</button>
+          </form>
+          <div id="upload-status"></div>
+        </div>
 
+        <!-- Transcript Panel -->
+        <div class="glass-card">
+          <h2>Transcription</h2>
+          <button id="transcribe-btn" disabled>Get Transcript</button>
+          <pre id="transcript-preview"></pre>
 
-    <section class="output">
-      <h2 class="section-title">Transcript Preview</h2>
-      <pre id="transcript-preview" class="transcript"></pre>
+          <label for="edit-transcript-text">Edit Transcript:</label>
+          <textarea id="edit-transcript-text" rows="7" disabled></textarea>
+          <button id="save-edit-btn" disabled>Save Edits</button>
+          <div id="edit-status"></div>
+        </div>
 
-      <label for="edit-transcript-text" class="label">Edit Transcript</label>
-      <textarea id="edit-transcript-text" rows="6" disabled class="textarea"></textarea>
-      <button id="save-edit-btn" disabled class="btn primary">Save Transcript</button>
-      <div id="edit-status" class="status"></div>
+        <!-- Action Items Panel -->
+        <div class="glass-card">
+          <h2>Action Items</h2>
+          <button id="extract-actions-btn" disabled>Extract Action Items</button>
+          <div id="action-items-label"></div>
+          <pre id="action-items-list"></pre>
+        </div>
+      </section>
+    </main>
+  </div>
 
-      <button id="extract-actions-btn" disabled class="btn accent">Extract Action Items</button>
-      <div id="action-items-label" class="status"></div>
-      <pre id="action-items-list" class="transcript"></pre>
-    </section>
+  <!-- Original Script (unchanged) -->
+  <script>
+    const form = document.getElementById("upload-form");
+    const statusDiv = document.getElementById("upload-status");
+    const transcribeBtn = document.getElementById("transcribe-btn");
+    const transcriptPreview = document.getElementById("transcript-preview");
+    const editTextarea = document.getElementById("edit-transcript-text");
+    const saveEditBtn = document.getElementById("save-edit-btn");
+    const editStatus = document.getElementById("edit-status");
+    const extractActionsBtn = document.getElementById("extract-actions-btn");
+    const actionItemsLabel = document.getElementById("action-items-label");
+    const actionItemsList = document.getElementById("action-items-list");
+    let lastUploadedFilename = null;
 
-    <div id="upload-status" class="status"></div>
-  </main>
+    const uploadBtn = document.getElementById("upload-btn");
+    uploadBtn.addEventListener("click", async () => {
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+      });
 
-  <script src="app.js"></script>
+      statusDiv.textContent = "";
+      transcriptPreview.textContent = "";
+      editTextarea.value = "";
+      editTextarea.disabled = true;
+      saveEditBtn.disabled = true;
+      extractActionsBtn.disabled = true;
+      if (!document.getElementById("audio").files.length) {
+        statusDiv.textContent = "Please select an audio file.";
+        transcribeBtn.disabled = true;
+        return;
+      }
+
+      const formData = new FormData();
+      formData.append("audio", document.getElementById("audio").files[0]);
+
+      try {
+        const res = await fetch("http://localhost:3000/upload", {
+          method: "POST",
+          body: formData,
+        });
+        if (!res.ok) {
+          statusDiv.textContent = "Upload failed: " + (await res.text());
+          transcribeBtn.disabled = true;
+        } else {
+          const json = await res.json();
+          statusDiv.textContent = "Upload succeeded: " + json.filename;
+          lastUploadedFilename = json.filename;
+          transcribeBtn.disabled = false;
+        }
+      } catch (err) {
+        statusDiv.textContent = "Error: " + err.message;
+        transcribeBtn.disabled = true;
+      }
+    });
+
+    transcribeBtn.addEventListener("click", async () => {
+      if (!lastUploadedFilename) return;
+      try {
+        const res = await fetch("http://localhost:3000/transcribe", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ filename: lastUploadedFilename }),
+        });
+        if (!res.ok) {
+          transcriptPreview.textContent = "Failed to get transcript.";
+          editTextarea.disabled = true;
+          saveEditBtn.disabled = true;
+        } else {
+          const data = await res.json();
+          transcriptPreview.textContent = data.transcript;
+          editTextarea.value = data.transcript;
+          editTextarea.disabled = false;
+          saveEditBtn.disabled = false;
+        }
+      } catch (err) {
+        transcriptPreview.textContent = "Error: " + err.message;
+        editTextarea.disabled = true;
+        saveEditBtn.disabled = true;
+      }
+    });
+
+    saveEditBtn.addEventListener("click", async () => {
+      if (!lastUploadedFilename || !editTextarea.value.trim()) return;
+      try {
+        const res = await fetch("http://localhost:3000/edit-transcript", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ filename: lastUploadedFilename, transcript: editTextarea.value }),
+        });
+        if (!res.ok) {
+          editStatus.textContent = "Failed to save edits.";
+          extractActionsBtn.disabled = true;
+        } else {
+          editStatus.textContent = "Transcript saved! You can now extract action items.";
+          extractActionsBtn.disabled = false;
+        }
+      } catch (err) {
+        editStatus.textContent = "Error: " + err.message;
+        extractActionsBtn.disabled = true;
+      }
+    });
+
+    extractActionsBtn.addEventListener("click", async () => {
+      const transcript = editTextarea.value.trim();
+      if (!transcript) {
+        actionItemsLabel.textContent = "No transcript to process.";
+        return;
+      }
+      try {
+        const res = await fetch("http://localhost:3000/extract-actions", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ transcript }),
+        });
+        if (!res.ok) {
+          actionItemsLabel.textContent = "Failed to extract action items.";
+          actionItemsList.textContent = "";
+        } else {
+          const data = await res.json();
+          actionItemsLabel.textContent = `Extracted ${data.total} Action Items:`;
+          if (data.actionItems.length) {
+            actionItemsList.textContent = data.actionItems.map((a, i) => `${i + 1}. ${a}`).join("\n");
+          } else {
+            actionItemsList.textContent = "(No actionable items detected)";
+          }
+        }
+      } catch (err) {
+        actionItemsLabel.textContent = "Error extracting action items.";
+        actionItemsList.textContent = err.message;
+      }
+    });
+  </script>
 </body>
 </html>
